syntax = "proto3";

package configurator;

option go_package = "github.com/slavayssiere-spoon/configurator";

message alerts {
	uint64 uptime = 1;
	uint64 downtime = 2;
	repeated string alert_list = 3;
	bool alert_connect = 4;
	bool alert_disconnect = 5;
	bool only_workingday = 6;
} 

message Conf {
	string identity = 1;
	alerts alerts = 2;
}

message AdminConf {
	string identity = 1;
	string subscription = 2;
}

message AutoConf {
	string identity = 1;
	string notificationsub = 2;
}

service configurator {
	rpc Get (Conf) returns (Conf) {}
	rpc SetAdminConf (AdminConf) returns (AdminConf) {}
	rpc SetAutoConf (AutoConf) returns (AutoConf) {}
}
